--- a/formulaire/css/style.css
+++ b/formulaire/css/style.css
@@ -287,7 +287,7 @@ input[type="password"] {
     background-position: -800px 0;
     background-size: 100%;
     background-repeat: no-repeat;
-    color: #fff;
+    /* color: #fff; */
     font-family: 'Roboto', sans-serif;
 }
 
@@ -336,8 +336,8 @@ input.text.w3lpass {
 
 input[type="submit"] {
     font-size: .9em;
-    color: #fff;
     /* background: rgb(255, 200, 0); */
+    color: black;
     outline: none;
     /* border: 1px solid rgb(255, 200, 0); */
     cursor: pointer;
@@ -486,7 +486,7 @@ input.checkbox:checked:after {
 }
 
 .colorlibcopy-agile p a:hover {
-    color: #000;
+    /* color: #000; */
 }
 
 
