--- a/css/notif.css
+++ b/css/notif.css
@@ -1,3 +1,10 @@
+/** 
+Auteur : Sam Freddi / Anthony puchol
+Description : css des notifications 
+// bibliotheque bootstrap open acces
+
+**/
+
 @import url('https://fonts.googleapis.com/css2?family=Manrope:wght@200&display=swap');
 * {
     padding: 0px;
