--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,13 @@
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
  */
 
+
+/** 
+Auteur : Sam Freddi / Anthony puchol
+Description : css des pages principales
+
+**/
+
 :root {
     --bs-blue: #0d6efd;
     --bs-indigo: #6610f2;
