--- a/formulaire/css/style.css
+++ b/formulaire/css/style.css
@@ -6,6 +6,13 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 --*/
 
 
+/** 
+Auteur : Sam Freddi / Anthony puchol
+Description : css des pages formulaires
+
+**/
+
+
 /*-- reset --*/
 
 html,
